Fixes issue 217 -- title wraps and obscures language selection links...

--- a/_sass/minima/_header.scss
+++ b/_sass/minima/_header.scss
@@ -37,7 +37,7 @@
   }
 
   @include media-query($on-palm) {
-    @include relative-font-size(1.2);
+    @include relative-font-size(1.1);
   }
 }
 
